# minigpt

./: .gitignore  README.md  create_training_plots.py  data.py  data_fast_tokenizer.py  generate.py  model.py  pyproject.toml  requirements.txt  serve.py  test_mps.py  train.py
