[project]
name = "minigpt"
version = "0.1.0"
description = "A minimal GPT-style transformer for educational purposes"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0.0",
    "numpy>=1.24.0",
    "datasets>=2.12.0",
    "fastapi>=0.95.0",
    "uvicorn>=0.22.0",
    "pydantic>=1.10.0",
    "python-dotenv>=1.0.0",
    "tokenizers>=0.22.2",
    "matplotlib>=3.10.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
exclude = [
    "*.pyc",
    "__pycache__",
    ".git*",
    "*.md",
    ".env*",
]

[dependency-groups]
dev = []
